--- a/QmlComponents/qmlcomponents.qrc
+++ b/QmlComponents/qmlcomponents.qrc
@@ -86,6 +86,7 @@
         <file>PathCanvasEditor/PointsTableWidget.qml</file>
         <file>VisionViewer/HikVisionLocationViewer.qml</file>
         <file>VisionViewer/HikVisionMenu.qml</file>
+        <file>VisionElementDefinition.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
