ReImplement XYZRDebugger to response to key events.

--- a/CommonIcons/pics.qrc
+++ b/CommonIcons/pics.qrc
@@ -6,7 +6,7 @@
         <file>calculator.png</file>
         <file>cameraOnOff.png</file>
         <file>ccw.png</file>
-        <file>close_program.png</file>
+        <file>close.png</file>
         <file>collapse.png</file>
         <file>cw.png</file>
         <file>debug.png</file>
