Add logo and Help menu.

--- a/QmlComponents/qmlcomponents.qrc
+++ b/QmlComponents/qmlcomponents.qrc
@@ -91,6 +91,7 @@
         <file>AlarmViewer/AlarmsViewer.qml</file>
         <file>AlarmViewer/PopupAlarmViewer.qml</file>
         <file>HeightMap.qml</file>
+        <file>HelpMenu.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
