--- a/CommonIcons/pics.qrc
+++ b/CommonIcons/pics.qrc
@@ -62,5 +62,8 @@
         <file>emo.png</file>
         <file>resetDriver.png</file>
         <file>buzzer.png</file>
+        <file>silicool.png</file>
+        <file>silicool1.png</file>
+        <file>silicool2.png</file>
     </qresource>
 </RCC>
